# flight-tracker-app

./: .env.example  .gitignore  CLAUDE.md  SESSION_HANDOFF.md  pyproject.toml  watchlist.yaml
.claude/skills/avoiding-duplicate-implementations/: SKILL.md
.claude/skills/aws-serverless-deploy/: SKILL.md
.claude/skills/deal-valuation/: SKILL.md
.claude/skills/flight-cash-price-monitor/: SKILL.md
.claude/skills/seats-aero-integration/: SKILL.md
.claude/skills/secrets-hygiene/: SKILL.md
.claude/skills/telegram-alerting/: SKILL.md
infra/: README.md  dynamodb.tf  example.tfvars  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  schedule.tf  secrets.tf  variables.tf
scripts/: build_lambda_package.sh  dry_run.py  live_smoke_test.py  serpapi_smoke_test.py
src/: cash.py  config.py  digest.py  poller.py  secrets.py  state.py  valuation.py
src/notify/: base.py  discord.py  telegram.py
src/providers/: seats_aero.py
src/providers/cash/: base.py  serpapi.py
tests/: conftest.py  test_cash.py  test_config.py  test_digest.py  test_discord.py  test_poller.py  test_seats_aero.py  test_secrets.py  test_serpapi.py  test_state.py  test_telegram.py  test_valuation.py
tests/fixtures/: seats_aero_cached_search.json  seats_aero_cached_search_economy.json  seats_aero_cached_search_mixed_cabins.json  seats_aero_cached_search_no_tax_program.json  seats_aero_get_trips.json  serpapi_google_flights_economy.json  serpapi_google_flights_one_way.json  test_watchlist.yaml
