[project]
name = "flight-deal-agent"
version = "1.1.0"
description = "Award + cash flight deal monitor for DC -> Europe, alerting via Discord."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
